Ajout du HTML/CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projet RPG</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body>
+    <header>
+      <div class="amelioration">
+        <h2>Amélioration</h2>
+      </div>
+    </header>
+    <div class="joueur">
+      <h2>Joueur</h2>
+    </div>
+
+    <main>
+      <div class="joueurCar"></div>
+      <div class="adversaire">
+        <h2>Adversaire</h2>
+      </div>
+    </main>
+
+    <footer>
+      <div class="historique">
+        <h2>Historique</h2>
+      </div>
+      <div class="choixCombat">
+        <h2>Choix</h2>
+        <div class="bouttons">
+          <button class="btn">ATTAQUE</button>
+          <button class="btn">SORT</button>
+          <button class="btn">DÉFENSE</button>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
