Ajout sauvegarde et menu
Ajout fichier js sauvegarde pas encore tester et la base de la page menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="module" src="assets/js/person.js"></script>
-    <script src="assets/js/main.js"></script>
+    <!--<script type="module" src="assets/js/person.js"></script>-->
+    <script type="modul" src="assets/js/main.js"></script>
+    <script src="assets/js/sauvegarde.js"></script>
   </body>
 </html>
