-Ajout de la classe Player

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 class="pointer" id="Joueur">Joueur</h2>
         <div class="listCar">
           <div>
-            <h4>Nom :</h4>
+            <h4 class="playerName"></h4>
           </div>
           <div class="playerCar">
             <img
@@ -100,6 +100,6 @@
     <script type="module" src="assets/js/sauvegarde.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
