--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
               position: relative;
             "
           >
-            <h2 class="adversaireTitle">Adversaire</h2>
+            <h2 class="adversaireTitle">Adversaire :</h2>
+            <p id="NomAd"></p>
             <img
               src="https://media.giphy.com/media/3o6wrdG8vt4X86Pauc/giphy.gif"
               alt=""
@@ -96,10 +97,9 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="assets/js/person.js"></script>
-    <script type="module" src="assets/js/sauvegarde.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script src="assets/js/monstre.js"></script>
+    <script src="assets/js/combat.js"></script>
     <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
