--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,17 @@
   </head>
   <body>
     <div class="popup" onclick="myFunction()">
-      <p>Show menu!</p>
-      <a href="index.html" class="popuptext" id="myPopup">Jeux</a>
+      <img
+        src="https://media.giphy.com/media/1yld7nW3oQ2IyRubUm/giphy.gif"
+        alt="test"
+        class="welcome"
+      />
+
+      <p>Welcome</p>
+
+      <a href="index.html" class="popuptext" id="myPopup"> Jeux</a>
       <a href="" class="popuptext" id="myPopup1">Sauvegarde</a>
+      <a href="" class="create popuptext" id="myPopup2">Création Joueur</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/menu.js"></script>
