--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
-    <div>
+    <div class="typePlayer"></div>
+    <div class="game">
       <header>
         <div class="amelioration">
           <h2>Amélioration</h2>
@@ -99,23 +100,18 @@
           </div>
         </div>
         <div class="adversaire">
-          <div
-            style="
-              width: 100%;
-              height: 0;
-              padding-bottom: 54%;
-              position: relative;
-            "
-          >
+          <div style="width: 100%; position: relative">
             <h2 class="adversaireTitle">Adversaire :</h2>
             <p id="NomAd"></p>
             <img
               src="https://media.giphy.com/media/3o6wrdG8vt4X86Pauc/giphy.gif"
               alt=""
               srcset=""
-              style="width: 100%"
+              style="width: 100%; height: 100%"
             />
           </div>
+          <div style="text-align-last: center">PV ennemi</div>
+          <div id="enemyHealth"><div id="enemyHealthBar"></div></div>
         </div>
       </main>
     </div>
@@ -131,14 +127,12 @@
         <!-- NOS BOUTONS  -->
         <div class="bouttons">
           <button class="btn bg-red" id="atq">ATTAQUE</button>
-          <button class="btn">SORT</button>
-          <button class="btn">DÉFENSE</button>
+          <button class="btn" id="sort">SORT</button>
+          <button class="btn" id="counter">CONTRER</button>
         </div>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="assets/js/monstre.js"></script>
-    <script src="assets/js/combat.js"></script>
     <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
