--- a/menu.html
+++ b/menu.html
@@ -18,8 +18,7 @@
       <p>Welcome</p>
 
       <a href="index.html" class="popuptext" id="myPopup"> Jeux</a>
-      <a href="" class="popuptext" id="myPopup1">Sauvegarde</a>
-      <a href="" class="create popuptext" id="myPopup2">Création Joueur</a>
+      <a href="" class="popuptext" id="myPopup1">Jeux</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/menu.js"></script>
