--- a/combat.html
+++ b/combat.html
@@ -143,5 +143,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="assets/js/main.js"></script>
+    <script src="assets/js/combat.js"></script>
   </body>
 </html>
