--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!--Div Popup-->
     <div class="popup" onclick="myFunction()">
       <img
         src="https://media.giphy.com/media/1yld7nW3oQ2IyRubUm/giphy.gif"
